--- a/index.html
+++ b/index.html
@@ -8,11 +8,83 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="json.js"></script>
     <title>QuizApp</title>
 </head>
 
-<body>
-    
+<body onload="init()">
+
+
+    <div class="card-container">
+        <nav class="nav flex-column nav-background card">
+            <div class="img-logo mt-3">
+                <img src="./img/logo.png">
+            </div>
+            <div class="mt-5">
+                <a class="nav-link" href="#">Allgemein</a>
+                <a class="nav-link" href="#">Politik</a>
+                <a class="nav-link" href="#">Geographie</a>
+                <a class="nav-link" href="#">Geschichte</a>
+            </div>
+        </nav>
+        <div class="card card-left-border">
+
+            <div class="card-body card-containers endscreen" id="endScreen" style="display:none">
+                <div>
+                    <img src="./img/brain result.png" alt="">
+                </div>
+                <div>
+                    <h2>COMPLETE QUIZ</h2>
+                </div>
+                <div>
+                   <h2 class="score-color">YOUR SCORE <b id="rightAnswers"></b>/<b id="currentQuestionEndscreen"></b></h2> 
+                </div>
+                <button onclick="restartGame()" type="button" class="btn btn-primary">REPLAY</button>
+            </div>
+
+            <div class="card-body card-containers" id="questionScreen">
+                <h5 class="card-title mt-3 mb-4" id="questiontext">Frage 1</h5>
+
+                <div class="card quiz-answer-card mb-2" onclick="answer('answer_1')">
+                    <div class="card-body" id="answer_1">
+                        <!-- Antwort -->
+                    </div>
+                </div>
+
+                <div class="card quiz-answer-card mb-2" onclick="answer('answer_2')">
+                    <div class="card-body" id="answer_2">
+                        <!-- Antwort -->
+                    </div>
+                </div>
+
+                <div class="card quiz-answer-card mb-2" onclick="answer('answer_3')">
+                    <div class="card-body" id="answer_3">
+                        <!-- Antwort -->
+                    </div>
+                </div>
+
+                <div class="card quiz-answer-card mb-2" onclick="answer('answer_4')">
+                    <div class="card-body" id="answer_4">
+                        <!-- Antwort -->
+                    </div>
+                </div>
+
+                <div class="question-footer">
+                    <span>
+                        <b id="currentQuestion">1</b> von <b id="lastQuestion"></b> Fragen
+                    </span>
+                    <button class="btn btn-primary" id="next-button" disabled onclick="nextQuestion()">Nächste
+                        Frage</button>
+                </div>
+                <div class="progress mt-5">
+                    <div id="progress-bar" class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 0%;">0%</div>
+                  </div>
+
+            </div>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
