--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
 
 <body onload="init()">
 
-
+    <ul class="nav justify-content-center align-items-center blue-background">
+        <li class="nav-item">
+            <img class="mobile-logo" src="./img/logo.png">
+          </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled">Disabled</a>
+        </li>
+      </ul>
     <div class="card-container">
         <nav class="nav flex-column nav-background card">
             <div class="img-logo mt-3">
