--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script src="json.js"></script>
+    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>QuizApp</title>
 </head>
 
@@ -17,20 +24,20 @@
     <ul class="nav justify-content-center align-items-center blue-background">
         <li class="nav-item">
             <img class="mobile-logo" src="./img/logo.png">
-          </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Active</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Allgemein</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Politik</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link" href="#">Geographie</a>
         </li>
-      </ul>
+        <li class="nav-item">
+            <a class="nav-link">Geschichte</a>
+        </li>
+    </ul>
     <div class="card-container">
         <nav class="nav flex-column nav-background card">
             <div class="img-logo mt-3">
@@ -43,44 +50,37 @@
                 <a class="nav-link" href="#">Geschichte</a>
             </div>
         </nav>
+        <!-- -----------------------Startscreen---------------------- -->
         <div class="card card-left-border">
-
-            <div class="card-body card-containers endscreen" id="endScreen" style="display:none">
-                <div>
-                    <img src="./img/brain result.png" alt="">
-                </div>
-                <div>
-                    <h2>COMPLETE QUIZ</h2>
-                </div>
-                <div>
-                   <h2 class="score-color">YOUR SCORE <b id="rightAnswers"></b>/<b id="currentQuestionEndscreen"></b></h2> 
-                </div>
-                <button onclick="restartGame()" type="button" class="btn btn-primary">REPLAY</button>
+            <div class="card-body card-containers start-screen" id="startScreen">
+                <h2>Welcome to <br> The Awesome Quiz</h2>
+                <h4>Ready for the Challenge?</h4>
+                <button onclick="startGame()" class="btn btn-primary orange">START NOW</button>
             </div>
-
-            <div class="card-body card-containers" id="questionScreen">
+            <!-- -----------------------Questionscreen---------------------- -->
+            <div class="card-body card-containers" id="questionScreen" style="display:none">
                 <h5 class="card-title mt-3 mb-4" id="questiontext">Frage 1</h5>
 
                 <div class="card quiz-answer-card mb-2" onclick="answer('answer_1')">
-                    <div class="card-body" id="answer_1">
+                    <div class="card-body answer-font" id="answer_1">
                         <!-- Antwort -->
                     </div>
                 </div>
 
                 <div class="card quiz-answer-card mb-2" onclick="answer('answer_2')">
-                    <div class="card-body" id="answer_2">
+                    <div class="card-body answer-font" id="answer_2">
                         <!-- Antwort -->
                     </div>
                 </div>
 
                 <div class="card quiz-answer-card mb-2" onclick="answer('answer_3')">
-                    <div class="card-body" id="answer_3">
+                    <div class="card-body answer-font" id="answer_3">
                         <!-- Antwort -->
                     </div>
                 </div>
 
                 <div class="card quiz-answer-card mb-2" onclick="answer('answer_4')">
-                    <div class="card-body" id="answer_4">
+                    <div class="card-body answer-font" id="answer_4">
                         <!-- Antwort -->
                     </div>
                 </div>
@@ -93,13 +93,31 @@
                         Frage</button>
                 </div>
                 <div class="progress mt-5">
-                    <div id="progress-bar" class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 0%;">0%</div>
-                  </div>
-
+                    <div id="progress-bar" class="progress-bar" role="progressbar" aria-label="Example with label"
+                        style="width: 0%;">0%</div>
+                </div>
+            </div>
+            <!-- -----------------------Endscreen---------------------- -->
+            <div class="card-body card-containers endscreen-container endscreen" id="endScreen" style="display:none">
+                    <div>
+                        <img src="./img/brain result.png" alt="">
+                    </div>
+                    <div>
+                        <h2>COMPLETE QUIZ</h2>
+                    </div>
+                    <div>
+                        <h2 class="score-color">YOUR SCORE <b id="rightAnswers"></b>/<b
+                                id="currentQuestionEndscreen"></b>
+                        </h2>
+                    </div>
+                    <button onclick="restartGame()" type="button" class="btn btn-primary">REPLAY</button>
             </div>
         </div>
-
+        <div>
+            <img id="trophy" class="trophy-img" src="./img/tropy.png" style="display:none">
+        </div>
     </div>
+    
 
 </body>
 
